# panoptic-segmentation-experiments

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
models/: mask2former_r50_8xb2-lsj-50e_cityscapes-panoptic_train.py
notebooks/: PanopticSegmentation.ipynb
scripts/: config.py  convert_cityscapes_to_coco_panoptic.py  download_cityscapes.py  image_demo.py  inference_one_image.py  test.py  train.py
src/: cityscapes_panoptic_dataset.py
